<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoteMe</string>
    <string name="hello_world">Hello VoteMe!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_custom_login_text">FB log please!</string>
    <string name="logout">Log out</string>
    <string name="title_activity_voting_result">VotingResultActivity</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="results">Voting results</string>
    <string name="vote">Vote</string>
    <string name="vote_me">Vote me!</string>
    <string name="vote_sent">Vote was sent</string>
    <string name="error_sent">Something went wrong</string>

    <!-- Form vote texts -->
    <string name="form_general">What are your general feelings?</string>
    <string name="form_trainer">How you rate knowledge trainer?</string>
    <string name="form_tasks">How you rate difficulty of tasks?</string>
    <string name="form_details">How you rate details of topic?</string>
    <string name="form_place">How you rate the place and conditions of training?</string>
    <string name="form_necessity">How you rate the necessity of training in this topic?</string>
    <string name="form_additional_notes">Additional notes about training</string>
    <string name="form_more_topics">Which topics should be presented on next training?</string>
    <string name="form_additional_notes_hint">Comments</string>
    <string name="form_more_topics_hint">Topics</string>
    <string name="form_send_button_text">Send</string>
    <string name="form_clear_button_text">Clear</string>
    <!-- END -->

    <!-- Results vote texts -->
    <string name="results_general">General feelings</string>
    <string name="results_necessity">Necessity of trainig</string>
    <string name="results_tasks">Difficulty of tasks</string>
    <string name="results_details">Topic details</string>
    <string name="results_trainer">Trainer knowledge</string>
    <string name="results_place">Place and conditions</string>


</resources>
