<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/FormText"
        android:text="@string/form_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarFeelings" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarPlace" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_trainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarTrainer" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_necessity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarNecessity" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarTasks" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarDetails" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_additional_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/formAdditionalText"
        android:hint="@string/form_additional_notes_hint"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="@style/FormText"
        android:text="@string/form_more_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/formMoreTopics"
        android:hint="@string/form_more_topics_hint"
        android:layout_gravity="center_horizontal" />
</merge>