<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.michalgorny.voteme.VoteActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <TextView
            style="@style/FormText"
            android:text="@string/form_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarFeelings" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarPlace" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_trainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarTrainer" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_necessity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarNecessity" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarTasks" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarDetails" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_additional_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formAdditionalText"
            android:hint="@string/form_additional_notes_hint"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/FormText"
            android:text="@string/form_more_topics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formMoreTopics"
            android:hint="@string/form_more_topics_hint"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_clear_button_text"
                android:id="@+id/clearFormButton" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_send_button_text"
                android:id="@+id/sendFormButton" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>